--- a/Frm_ventas/App.config
+++ b/Frm_ventas/App.config
@@ -3,11 +3,9 @@
     <configSections>
     </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <connectionStrings>
-      <add name="S1AM"
-          connectionString="Persist Security Info = True; Provider = SQLNCLI11; Data Source = 172.17.5.3; Password = 123456aA!; User ID = sa; Initial Catalog = StarWarsOrders;"
-          providerName="System.Data.OleDb" />
+      <add name="S1AM" connectionString="Persist Security Info = True; Provider = SQLNCLI11; Data Source = 172.17.5.3; Password = 123456aA!; User ID = sa; Initial Catalog = StarWarsOrders;" providerName="System.Data.OleDb"/>
     </connectionStrings>
 </configuration>
